perf(Camera): optimize ray casting and adaptive super-sampling for multi-threading
- Precomputed view plane center (pC) in Builder to avoid redundant vector math per pixel.
- Replaced Math.random() with ThreadLocalRandom to eliminate lock contention during parallel rendering.
- Refactored adaptiveSuperSampling to pass known corner colors recursively.
- Removed Java Stream overhead in color averaging and comparison loops.
- Added List pre-allocation to reduce dynamic resizing and Garbage Collection pressure.
- Fixed Zero-Scaling Vector bug during offset calculation.